[package]
name = "bpf"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "1.0"
redbpf-probes = "1.0"

[build-dependencies]
cargo-bpf = { version = "1.0", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "monitor-probe"
path = "src/monitor-probe/main.rs"
required-features = ["probes"]
